executable(coloreditor SOURCES coloreditor.cpp LIBS SoWw)

executable(embeddedexaminer SOURCES embeddedexaminer.cpp LIBS SoWw)

executable(renderarea SOURCES renderarea.cpp LIBS SoWw)

executable(wx_renderarea SOURCES wx_renderarea.cpp LIBS SoWw)

executable(examinerviewer SOURCES examinerviewer.cpp LIBS SoWw)

#add_executable(scrollview components/scrollview.cpp)
#target_link_libraries(scrollview SoWw)

#add_executable(tripleview components/tripleview.cpp)
#target_link_libraries(tripleview SoWw)

executable(withoutdecor0 SOURCES withoutdecor0.cpp LIBS SoWw)

executable(withoutdecor1 SOURCES withoutdecor1.cpp LIBS SoWw)
