executable(coloreditor SOURCES coloreditor.cpp LIBS SoWw)

executable(materialeditor  SOURCES materialeditor.cpp LIBS SoWw)

executable(renderarea SOURCES renderarea.cpp LIBS SoWw)

executable(wx_renderarea SOURCES wx_renderarea.cpp LIBS SoWw)

#add_executable(scrollview components/scrollview.cpp)
#target_link_libraries(scrollview SoWw)

executable(tripleview SOURCES tripleview.cpp LIBS SoWw)

executable(withoutdecor0 SOURCES withoutdecor0.cpp LIBS SoWw)

executable(withoutdecor1 SOURCES withoutdecor1.cpp LIBS SoWw)
